--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -4,7 +4,7 @@
     background-image: url('../../../assets/contacto mobile.png');
     background-size: cover;
     background-position: center;
-    padding-top: 25vh;
+    padding-top: 15vh;
     padding-bottom: 20px;
     color: white;
     position: relative;
@@ -12,37 +12,43 @@
     overflow-x: hidden;
 
     .content {
-      height: 100vh;
-      padding: 0 20px;
+      padding: 0 22px;
       max-width: 100%;
     }
 
     .info {
       font-family: "Guton";
       font-weight: 400;
-      font-size: 16pt;
+      font-size: 14pt;
       letter-spacing: 0.1em;
       text-transform: uppercase;
       margin-bottom: 5px;
       line-height: 50pt;
+      margin-top: 40px;
     }
-  .tittle {
-    font-family: "Guton";
-    font-weight: bold;
-    font-size: 30pt;
-    line-height: 50pt;
-    text-align: left;
-    margin: 10px 0;
-    word-wrap: break-word;
-    word-break: break-word;
-    max-width: 100%;
-  }
 
-  .text {
-    font-size: 16pt;
-    line-height: 22pt;
+    .tittle {
+      font-family: "Guton";
+      font-weight: bold;
+      font-size: 29pt;
+      line-height: 35pt;
+      text-align: left;
+      margin: 10px 0;
+      word-wrap: break-word;
+      word-break: break-word;
+      max-width: 100%;
+    }
+
+    .text {
+      font-family: "Guton";
+      font-weight: 400;
+      font-size: 19pt;
+      line-height: 20pt;
+      text-align: left;
+      margin-top: 10px;
+      margin-bottom: 7rem;
+    }
   }
-}
 .seccion2 {
   background: #1525EA;
   color: white;
@@ -82,8 +88,8 @@
     font-weight: bold !important;
   }
   .description{
-    font-size: 18pt;
-    line-height: 19pt;
+    font-size: 16pt;
+    line-height: 16pt;
 
   }
 }
@@ -96,7 +102,7 @@
   margin-bottom: 20px;
   .description{
     font-size: 16pt;
-    line-height: 20pt;
+    line-height: 18pt;
     padding-top: 40px;
 
   }
@@ -104,7 +110,6 @@
 
 
 .content {
-  margin-top: -50px;
   padding: 0 22px;
   max-width: 100%;
 }
@@ -173,26 +178,26 @@ font-family: "GutonMed";
 
 .title {
   font-family: "GutonSemBd";
-  font-size: 24pt;
+  font-size: 25pt;
   margin: 10px 0;
-  line-height: 36pt;
+  line-height: 30pt;
   display: flex;
   text-align: start;
   }
 
 .description {
   font-family: "Guton";
-  font-size: 15pt;
+  font-size: 16pt;
   margin-top: 15px;
   display: flex;
   text-align: start;
-  line-height: 27pt;
+  line-height: 18pt;
 }
 
 .features {
-  line-height: 27pt;
+  line-height: 18pt;
   font-family: "Guton";
-  font-size: 15pt;
+  font-size: 16pt;
   display: flex;
   text-align: start;
   list-style: none;
@@ -220,9 +225,10 @@ font-family: "GutonMed";
     }
 
     .info {
+      margin-top: 40px;
       font-family: "Guton";
       font-weight: 400;
-      font-size: 16pt;
+      font-size: 14pt;
       letter-spacing: 0.1em;
       text-transform: uppercase;
       margin-bottom: 5px;
@@ -232,8 +238,8 @@ font-family: "GutonMed";
     .tittle {
       font-family: "Guton";
       font-weight: bold;
-      font-size: 33pt;
-      line-height: 50pt;
+      font-size: 29pt;
+      line-height: 35pt;
       text-align: left;
       margin: 10px 0;
       word-wrap: break-word;
@@ -244,8 +250,8 @@ font-family: "GutonMed";
     .text {
       font-family: "Guton";
       font-weight: 400;
-      font-size: 18pt;
-      line-height: 27pt;
+      font-size: 19pt;
+      line-height: 20pt;
       text-align: left;
       margin-top: 10px;
       margin-bottom: 7rem;
@@ -284,15 +290,10 @@ font-family: "GutonMed";
     height: 100vh;
     overflow-x: hidden;
     .title{
-      line-height: 37pt;
-      font-size: 32pt;
+     
+      font-size: 28pt;
       font-family: "Guton" !important;
       font-weight: bold !important;
-    }
-    .description{
-      font-size: 19pt;
-      line-height: 19pt;
-
     }
   }
   .seccion6 {
@@ -303,14 +304,13 @@ font-family: "GutonMed";
     position: relative;
     margin-bottom: 20px;
     .description{
-      font-size: 20pt;
-      line-height: 24pt;
+      font-size: 19pt;
       padding-top: 40px;
     }
   }
   
   .content {
-    margin-top: -50px;
+   
     padding: 0 22px;
     max-width: 100%;
   }
@@ -361,26 +361,26 @@ font-family: "GutonMed";
   
   .title {
     font-family: "GutonSemBd";
-    font-size: 29pt;
+    font-size: 25pt;
     margin: 10px 0;
-    line-height: 36pt;
+    line-height: 30pt;
     display: flex;
     text-align: start;
     }
   
   .description {
     font-family: "Guton";
-    font-size: 18pt;
+    font-size: 19pt;
     margin-top: 15px;
     display: flex;
     text-align: start;
-    line-height: 27pt;
+    line-height: 20pt;
   }
   
   .features {
-    line-height: 27pt;
+    line-height: 20pt;
     font-family: "Guton";
-    font-size: 18pt;
+    font-size: 19pt;
     display: flex;
     text-align: start;
     list-style: none;
