--- a/src/app/components/nabvar/procesos/procesos.component.html
+++ b/src/app/components/nabvar/procesos/procesos.component.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid section-process">
   <div class="row">
     <div class="text-start text-white py-5">
@@ -8,6 +7,13 @@
 
   <div class="row justify-content-center">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicadores del carrusel -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
       <div class="carousel-inner">
         <!-- Tarjeta 1 y 2 (Slide 1) -->
         <div class="carousel-item active">
