--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -2,27 +2,27 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="team-member text-center">
-          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 1">
+          <img src="../../../../assets/foto leo.png" class="d-block rounded-circle mx-auto" alt="Persona 1">
           <h3>Leonardo Gimeno</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Director Ejecutivo | Ing. Aeronáutico <br>
+           Linkedin Leonardo R Gimeno</p>
         </div>
       </div>
       <div class="carousel-item">
         <div class="team-member text-center">
-          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 2">
-          <h3>Leonardo Gimeno</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <img src="../../../../assets/foto santi.png" class="d-block rounded-circle mx-auto" alt="Persona 2">
+          <h3>Santiago Yaconis</h3>
+          <p>Socio Fundador | Ing. Quimico <br>
+          Especialista en Automatización y Control de Procesos</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="team-member text-center">
-          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 3">
-          <h3>Leonardo Gimeno</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
+      
     </div>
-  
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="teamCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="teamCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+     
+    </div>
     <!-- Controles del carousel -->
     <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -35,45 +35,15 @@
   </div>
   <div id="teamRow" class="team-row">
     <div class="team-member">
-      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 1">
+      <img src="../../../../assets/foto leo.png" class="rounded-circle" alt="Persona 1">
       <h3>Leonardo Gimeno</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="team-member">
-      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 2">
-      <h3>Leonardo Gimeno</h3>
-      <p>Lorem ipsum dolor sit amet.</p>
-    </div>
-    <div class="team-member">
-      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 3">
+      <img src="../../../../assets/foto santi.png" class="rounded-circle" alt="Persona 2">
       <h3>Leonardo Gimeno</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
   </div>
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <h2>Confian en nosotros:</h2>
-      <!-- Fila superior con tres imágenes -->
-      <div class="col-4 col-lg-2 text-center mb-3">
-        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
-      </div>
-      <div class="col-4 col-lg-2 text-center mb-3">
-        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
-      </div>
-      <div class="col-4 col-lg-2  text-center mb-3">
-        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
-      </div>
-    </div>
-    
-    <div class="row justify-content-center">
-      <!-- Fila inferior con dos imágenes -->
-      <div class="col-4 col-lg-2  text-center mb-3">
-        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
-      </div>
-      <div class="col-4 col-lg-2  text-center mb-3">
-        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
-      </div>
-    </div>
-  </div>
-  
+ 
