--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -94,7 +94,18 @@ h2.text-center {
   font-size: 1.3rem;
 }
 .carousel-indicators{
-display: none;
+  margin-top: 50px;
+}
+.carousel-indicators [data-bs-target] {
+ 
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ccc; /* Color para los indicadores inactivos */
+  margin: 0 4px; /* Espaciado entre los indicadores */
+}
+.carousel-indicators .active {
+  background-color: #000; /* Color negro para el indicador activo */
 }
 
   /* Color para cada card utilizando nth-child */
