--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div [@fadeAnimation]="getRouteAnimation()">
     <router-outlet></router-outlet>
   </div>
+  <app-contact></app-contact>
   <ng-container *ngIf="footerLoaded">
     <app-footer></app-footer>
   </ng-container>
