--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -13,6 +13,7 @@
   </ng-container>
    <ng-container *ngIf="procesosLoaded">
     <app-procesos/>
+    <app-dragos></app-dragos>
   </ng-container>
    <ng-container *ngIf="personalLoaded">
     <app-personal/>
