--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -279,7 +279,7 @@ font-family: "GutonMed";
     background-image: url('../../../assets/Banner nube.png');
     background-size: cover;
     background-position: center;
-    padding-top: 10vh;
+    padding-top: 20px;
     
     color: white;
     position: relative;
