--- a/src/app/components/nabvar/personal/personal.component.html
+++ b/src/app/components/nabvar/personal/personal.component.html
@@ -1,7 +1,7 @@
 <!-- Imagen y texto adicional -->
 <div class="image-text ">
     <img
-      src="../../../../assets/foto mobile.png"
+      src="../../../../assets/foto-ellos.png"
       alt="Imagen destacada"
       class="image"
     />
