implement seccion dos dealey

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -5,7 +5,7 @@
       <h1>Innovación <br> & seguridad</h1>
       <p>Nacidos en OT, con la experiencia que necesitas para un futuro digital sostenible.</p>
       <button type="button" class="btn btn-light bt-service">
-        <a>DESCUBRE MÁS</a> 
+        <a [routerLink]="['/servicios']" fragment="seccion">DESCUBRE MÁS</a> 
       </button>
     </div>
   </div>
