--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="btn-container">
         <button type="button" class="btn btn-light bt-service">
-          <a routerLink='/servicios'>DESCUBRE TODOS LOS SERVICIOS</a>
+          <a [routerLink]="['/servicios']" fragment="seccion">DESCUBRE TODOS LOS SERVICIOS</a>
         </button>
       </div>
     </div>
