--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -1,4 +1,4 @@
-<div class="seccion1">
+<section id="seccion" class="seccion1">
   <div class="content">
     <p class="info">NUESTROS SERVICIOS</p>
     <H1 class="tittle"
@@ -16,9 +16,9 @@
       procesos industriales.
     </p>
   </div>
-</div>
+</section>
 
-<div class="seccion2">
+<div class="seccion seccion2">
   <div class="cta-button">
     CONECTÁ CON EXPERTOS
     <span class="arrow">→</span>
@@ -47,7 +47,7 @@
     </div>
   </div>
 </div>
-<div class="seccion3">
+<div class="seccion seccion3">
   <img src="../../../assets/Tuerca.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
     <h2 class="title">
@@ -66,7 +66,7 @@
     </div>
   </div>
 </div>
-<div class="seccion4">
+<div class="seccion seccion4">
   <img src="../../../assets/Nube.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
     <h2 class="title">Soluciones Avanzadas en Transformación Digital</h2>
