--- a/src/app/components/nabvar/dragos/dragos.component.html
+++ b/src/app/components/nabvar/dragos/dragos.component.html
@@ -1,9 +1,11 @@
-<div class="container">
-<div class="alianza-container">
-    <h1>Nuestra alianza con</h1>
-    <img src="../../../../assets/dragos.png" alt="Logo de Dragos" class="logo">
-    <p>Salem es canal oficial de Dragos en la región. Ofrecemos acceso a la tecnología más avanzada en ciberseguridad industrial.</p>
-    <p>Dragos es, por excelencia, una plataforma diseñada para proteger los sistemas contra ciberataques, asegurando la continuidad y seguridad de las operaciones.</p>
-    <p>Con Dragos, garantizamos la protección necesaria para enfrentar los desafíos cibernéticos actuales, asegurando la seguridad y resiliencia de nuestras infraestructuras críticas.</p>
-</div>
+<div class="background">
+    <div class="container">
+        <div class="alianza-container">
+            <h1>Nuestra alianza con</h1>
+            <img src="../../../../assets/dragos.png" alt="Logo de Dragos" class="logo">
+            <p>Salem es canal oficial de Dragos en la región. Ofrecemos acceso a la tecnología más avanzada en ciberseguridad industrial.</p>
+            <p>Dragos es, por excelencia, una plataforma diseñada para proteger los sistemas contra ciberataques, asegurando la continuidad y seguridad de las operaciones.</p>
+            <p>Con Dragos, garantizamos la protección necesaria para enfrentar los desafíos cibernéticos actuales, asegurando la seguridad y resiliencia de nuestras infraestructuras críticas.</p>
+        </div>
+        </div>
 </div>
