--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -37,12 +37,14 @@
     <div class="team-member">
       <img src="../../../../assets/foto leo.png" class="rounded-circle" alt="Persona 1">
       <h3>Leonardo Gimeno</h3>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Director Ejecutivo | Ing. Aeronáutico 
+       Linkedin Leonardo R Gimeno</p>
     </div>
     <div class="team-member">
       <img src="../../../../assets/foto santi.png" class="rounded-circle" alt="Persona 2">
-      <h3>Leonardo Gimeno</h3>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h3>Santiago Yaconis</h3>
+          <p>Socio Fundador | Ing. Quimico 
+          Especialista en Automatización y Control de Procesos</p>
     </div>
   </div>
 
