--- a/src/app/components/nabvar/contact/contact.component.html
+++ b/src/app/components/nabvar/contact/contact.component.html
@@ -39,6 +39,12 @@
               El mensaje es obligatorio.
             </div>
           </div>
+            <!-- Spinner -->
+  <div *ngIf="isLoading" class="d-flex justify-content-center my-3">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Cargando...</span>
+    </div>
+  </div>
           <button type="submit" class="btn " [disabled]="contactForm.invalid">Enviar Consulta</button>
         </form>
       </div>
