--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,11 +1,12 @@
 
 .banner-img{
-  width: 100%;
   background-size: cover; /* Ajusta la imagen para que cubra toda el área */
   background-position: center; /* Centra la imagen en el contenedor */
 }
 .banner-container {
   position: relative;
+  box-sizing: border-box;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
 }
