seccion 2 correct desktop

--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -51,7 +51,7 @@
   <img src="../../../assets/Tuerca.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
     <h2 class="title">
-      Consultoría en Automatización y Optimización de Procesos
+      Consultoría en Automatización <br> y Optimización de Procesos
     </h2>
     <p class="description">
       Maximiza la eficiencia de tus operaciones con nuestras soluciones a
@@ -69,7 +69,7 @@
 <div class="seccion seccion4">
   <img src="../../../assets/Nube.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
-    <h2 class="title">Soluciones Avanzadas en Transformación Digital</h2>
+    <h2 class="title">Soluciones Avanzadas <br> en Transformación Digital</h2>
     <p class="description">
       Lidera el cambio hacia un futuro más sostenible y eficiente:
     </p>
