--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -1,6 +1,4 @@
-#seccion1 {
-  scroll-margin-top: 70px; /* Ajusta este valor según la altura de tu navbar */
-}
+
 @media (max-width: 380px) {
   .seccion {
   opacity: 0;
@@ -91,6 +89,8 @@ transform: translateX(0); /* Aparece en su posición final */
   position: relative;
   height: 100vh;
   overflow-x: hidden;
+  display: flex;
+  align-items: stretch;
   .title{
     line-height: 37pt;
     font-size: 25pt;
@@ -302,7 +302,8 @@ font-family: "GutonMed";
     background-image: url('../../../assets/Banner nube.png');
     background-size: cover;
     background-position: center;
-    padding-top: 20px;
+   display: flex;
+   align-items: center;
     
     color: white;
     position: relative;
@@ -374,6 +375,188 @@ font-family: "GutonMed";
   }
   
   .icon {
+   margin-top: 30px;
+  }
+  
+  .title {
+    font-family: "GutonSemBd";
+    font-size: 25pt;
+    line-height: 30pt;
+    display: flex;
+    text-align: start;
+    }
+  
+  .description {
+    font-family: "Guton";
+    font-size: 1.3rem;
+    margin-top: 15px;
+    display: flex;
+    text-align: start;
+  }
+  
+  .features {
+    
+    font-family: "Guton";
+    font-size: 1.3rem;
+    display: flex;
+    text-align: start;
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media(min-width: 768px) {
+  .seccion {
+    opacity: 0;
+    transform: translateX(-100%); /* Inicia fuera de la pantalla */
+    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
+  }
+    .seccion.animate {
+  
+  opacity: 1;
+  transform: translateX(0); /* Aparece en su posición final */
+  }
+  .seccion1 {
+    background-image: url('../../../assets/contacto mobile.png');
+    background-size: cover;
+    background-position: center;
+    padding-top: 15vh;
+    padding-bottom: 20px;
+    color: white;
+    position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
+
+    .content {
+      padding: 0 22px;
+      max-width: 100%;
+    }
+
+    .info {
+      margin-top: 40px;
+      font-family: "Guton";
+      font-weight: 400;
+      font-size: 14pt;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+      line-height: 50pt;
+    }
+
+    .tittle {
+      font-family: "Guton";
+      font-weight: bold;
+      font-size: 29pt;
+      line-height: 35pt;
+      text-align: left;
+      margin: 10px 0;
+      word-wrap: break-word;
+      word-break: break-word;
+      max-width: 100%;
+    }
+
+    .text {
+      font-family: "Guton";
+      font-weight: 400;
+      font-size: 1.3rem;
+      line-height: 20pt;
+      text-align: left;
+      margin-top: 10px;
+      margin-bottom: 7rem;
+    }
+  }
+  .seccion2 {
+    background: #1525EA;
+    color: white;
+   text-align: center;
+    max-width: 100%;
+    position: relative;
+  }
+  .seccion3 {
+    background: #CB00D1;
+    color: white;
+   text-align: center;
+    max-width: 100%;
+    position: relative;
+  }
+  .seccion4 {
+    background: #5100D5;
+    color: white;
+    text-align: center;
+    max-width: 100%;
+    position: relative;
+    margin-bottom: 20px;
+  }
+  .seccion5 {
+    background-image: url('../../../assets/Banner nube.png');
+    background-size: cover;
+    background-position: center;
+   display: flex;
+   align-items: center;    
+    color: white;
+    position: relative;
+    height: 100vh;
+    overflow-x: hidden;
+    .title{
+     
+      font-size: 25pt;
+      font-family: "Guton" !important;
+      font-weight: bold !important;
+    }
+  }
+  .seccion6 {
+   
+    color: rgb(0, 0, 0);
+    text-align: center;
+    max-width: 100%;
+    position: relative;
+    margin-bottom: 20px;
+    .description{
+      font-size: 1.3rem;
+  
+    }
+  }
+  
+  .content {
+   
+    padding: 0 22px;
+    max-width: 100%;
+  }
+  .cta-button {
+    background-color: white;
+    color: #1f2cd6;
+  font-family: "GutonMed"; 
+    padding: 10px 20px;
+    font-size: 16px;
+    line-height: 22pt; /* Interlineado */
+    letter-spacing: 0.1em; /* Kerning */
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  .cta-button2 {
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
+    font-family: "GutonMed";
+    padding: 15px 20px;
+    font-size: 17pt;
+    letter-spacing: 0.1em;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  .arrow {
+    font-size: 22px; /* Tamaño de la flecha */
+    margin-top: -10px; /* Espacio entre texto y flecha */
+  }
+  
+  .icon {
+    width: 200px;
    margin-top: 30px;
   }
   
